Added GetTaskByID method
