# openapi/openapi.yaml
@@ -41,6 +41,32 @@ paths:
                 $ref: '#/components/schemas/Task'
 
   /tasks/{id}:
+    get:
+      summary: get task by ID
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the task to get
+          schema:
+            type: integer
+            format: uint
+      
+      responses:
+        '200':
+          description: The task by ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '404':
+          description: Task not found
+        '400':
+          description: Bad request
+
+
     patch:
       summary: Partial update the task
       tags:
